Project Structure Tuned

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
       content="Start your development with a Dashboard for Bootstrap 4."
     />
     <meta name="author" content="Creative Tim" />
-    <title>{% block title %}{% endblock %} | Shrinkers</title>
+    <title>{% block title %}{% endblock %} | FastSHOP</title>
 
     <!-- Fonts -->
     <link
