--- a/templates/login.html
+++ b/templates/login.html
@@ -50,7 +50,7 @@
           <div class="row justify-content-center">
             <div class="col-xl-5 col-lg-6 col-md-8 px-5">
               <h1 class="text-white">로그인</h1>
-              <p class="text-lead text-white">Shrinkers에 오신것을 환영합니다.</p>
+              <p class="text-lead text-white">FastSHOP에 오신것을 환영합니다.</p>
             </div>
           </div>
         </div>
