--- a/templates/register.html
+++ b/templates/register.html
@@ -24,7 +24,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="Start your development with a Dashboard for Bootstrap 4.">
   <meta name="author" content="Creative Tim">
-  <title>Shrinkers - Register</title>
+  <title>FastSHOP - Register</title>
 
   <!-- Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
@@ -48,7 +48,7 @@
           <div class="row justify-content-center">
             <div class="col-xl-5 col-lg-6 col-md-8 px-5">
               <h1 class="text-white">회원가입</h1>
-              <p class="text-lead text-white">Shrinkers에 오신것을 환영합니다.</p>
+              <p class="text-lead text-white">FastSHOP에 오신것을 환영합니다.</p>
             </div>
           </div>
         </div>
@@ -175,7 +175,7 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.7/dist/loadingoverlay.min.js"></script>
- 
+
 <script>
 let vm = new Vue({
     delimiters: ['[[', ']]'],
